--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "vue-chartjs": "^3.4.0",
+    "vue-flatpickr": "^2.3.0",
+    "vue-flatpickr-component": "^7.0.4",
+    "vue-range-slider": "^0.6.0",
+    "chart.js": "^2.7.2",
+    "flatpickr": "^4.5.1",
+    "line-chart-vue": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
