--- a/Front/package.json
+++ b/Front/package.json
@@ -12,18 +12,18 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
-    "popper.js": "^1.12.9",
-    "vue": "^2.5.3",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "vue-chartjs": "^3.4.0",
-    "vue-flatpickr": "^2.3.0",
-    "vue-flatpickr-component": "^7.0.4",
-    "vue-range-slider": "^0.6.0",
     "chart.js": "^2.7.2",
     "flatpickr": "^4.5.1",
-    "line-chart-vue": "^1.0.3"
+    "line-chart-vue": "^1.0.3",
+    "popper.js": "^1.12.9",
+    "vue": "^2.5.3",
+    "vue-chartjs": "^3.4.0",
+    "vue-flatpickr": "^2.3.0",
+    "vue-flatpickr-component": "^7.0.6",
+    "vue-range-slider": "^0.6.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
