--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,19 +1,12 @@
-FROM node:8
-
-# Create app directory
+FROM node:9.11.1-alpine as build-stage
 WORKDIR /app
-
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
 COPY package*.json ./
-
 RUN npm install
-# If you are building your code for production
-# RUN npm install --only=production
-
-# Bundle app source
 COPY . .
+RUN npm run build
 
-EXPOSE 8081
-CMD [ "npm","run", "start" ]
+# production stage
+FROM nginx:1.13.12-alpine as production-stage
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
